src/objects/Spire_Benefit_Check_Remark_Codes__mdt.object
<CustomObject>
    <description>Used to house benefit check remark code descriptions per US3595691</description>
    <fields>
        <fullName>Benefit_Check_Claim_Remark__c</fullName>
        <label>Benefit Check Claim Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payout_Categories__c</fullName>
        <label>Payout Categories</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOPS_Description__c</fullName>
        <label>TOPS Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Spire Benefit Check Remark Codes</label>
    <pluralLabel>Spire Benefit Check Remark Codes</pluralLabel>
</CustomObject>